sandbox/output
OneHundredDoors.java:29: error: cannot find symbol
            doors.set(1, "O"); 
            ^
  symbol:   variable doors
  location: class OneHundredDoors
OneHundredDoors.java:32: error: cannot find symbol
            doors.set(1, "O"); 
            ^
  symbol:   variable doors
  location: class OneHundredDoors
OneHundredDoors.java:33: error: cannot find symbol
            doors.set(2, "C"); 
            ^
  symbol:   variable doors
  location: class OneHundredDoors
OneHundredDoors.java:36: error: cannot find symbol
        doors.set(1, "O"); 
        ^
  symbol:   variable doors
  location: class OneHundredDoors
OneHundredDoors.java:37: error: cannot find symbol
        doors.set(2, "C"); 
        ^
  symbol:   variable doors
  location: class OneHundredDoors
OneHundredDoors.java:38: error: cannot find symbol
        doors.set(3, "C"); 
        ^
  symbol:   variable doors
  location: class OneHundredDoors
6 errors
